--- a/editing/godrej.css
+++ b/editing/godrej.css
@@ -447,7 +447,7 @@ section {
 .residences-content {
   margin-left: 100px;
   padding-top: 20px;
-
+  padding-left: 40px;
 }
 
 .residences-content h2 {
